apps/docker-registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: docker-registry
  template:
    metadata:
      labels:
        app.kubernetes.io/name: docker-registry
    spec:
      containers:
      - name: docker-registry
        image: registry
        ports:
        - containerPort: 5000
          name: registry-http
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: docker-registry-data
          mountPath: /var/lib/registry
        securityContext:
          runAsNonRoot: true
          runAsUser: 2001
          runAsGroup: 2001
      serviceAccountName: docker-registry
      volumes:
      - name: docker-registry-data
        persistentVolumeClaim:
          claimName: docker-registry-data
