apps/docker-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: docker-registry
spec:
  ports:
  - name: http-registry
    port: 5000
    protocol: TCP
    targetPort: http-registry
  selector:
    app.kubernetes.io/name: docker-registry
  type: ClusterIP
