apps/docker-registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: self-signed
    cert-manager.io/common-name: registry.k8s
    kubernetes.io/ingress.class: haproxy-public
  name: docker-registry
  namespace: docker-registry
spec:
  tls:
  - secretName: registry-tls
    hosts:
    - registry.k8s
  rules:
  - host: registry.k8s
    http:
      paths:
      - backend:
          service:
            name: docker-registry
            port:
              name: http-registry
        path: /
        pathType: Prefix
